--- a/src/app/additem/additem.component.html
+++ b/src/app/additem/additem.component.html
@@ -6,16 +6,25 @@
     <div class="row">
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Name</label>
-            <input type="text" class="form-control" formControlName="name" id="exampleFormControlInput1" placeholder="name@example.com">
+            <input [class.is-invalid]="checkValidName?.touched && checkValidName?.invalid" type="text" class="form-control" formControlName="name" id="exampleFormControlInput1" placeholder="Your name...">
+            <div *ngIf="checkValidName?.errors && checkValidName?.touched" class="text-danger">
+              <small *ngIf="checkValidName?.errors?.['required']">* This Field is requied</small>
+              <small *ngIf="checkValidName?.errors?.['pattern']">* can not write number in name field</small>
+            </div>
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Email</label>
-            <input type="email" class="form-control" formControlName="email" id="exampleFormControlInput1" placeholder="name@example.com">
+            <input [class.is-invalid]="checkValidEmail?.touched && checkValidEmail?.invalid" type="email" class="form-control" formControlName="email" id="exampleFormControlInput1" placeholder="name@example.com">
+            <div *ngIf="checkValidEmail?.errors && checkValidEmail?.touched" class="text-danger">
+              <small *ngIf="checkValidEmail?.errors?.['required']">* This Field is requied</small>
+              <small *ngIf="checkValidEmail?.errors?.['pattern']">* Enter a valid email</small>
+            </div>
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">City</label>
-            <input type="text" class="form-control" formControlName="city" id="exampleFormControlInput1" placeholder="name@example.com">
+            <input [class.is-invalid]="checkValidCity?.touched && checkValidCity?.invalid" type="text" class="form-control" formControlName="city" id="exampleFormControlInput1" placeholder="City....">
+            <small *ngIf="checkValidCity?.errors?.['required'] && checkValidCity?.touched" class="text-danger">* this is required field</small>
           </div>
-          <button class="btn btn-info" (click)="onSubmit()">Submit </button>
+          <button class="btn btn-info" (click)="onSubmit()" [disabled]="!formValue.valid">Submit </button>
     </div>    
 </div>
