--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -2,31 +2,28 @@
     <h1 style="text-transform: uppercase;" class="text-center">Dashboard</h1>
 
 </div>
-<div class="container w-100">
+<div class="container w-100 mb-5">
     <button class="btn btn-danger md-0" routerLink="/additem" >Add Item</button>
 </div>
- <div>
+ <div class="container">
     <table class="table">
         <thead>
-          <tr>
+          <tr style="text-transform: uppercase;font-size: large;">
             <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
+            <th scope="col">Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">City</th>
             <th scope="col">Action</th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let item of myArray">
-            <th scope="row">{{item.id}}</th>
-            <td>{{item.name}}</td>
-            <td>{{item.email}}</td>
-            <td>{{item.city}}</td>
-            <td><button class="btn btn-info" (click)="deleteBtn(item.id)">delete</button></td>
+          <tr *ngFor="let item of myArray;let i=index">
+            <th scope="row">{{i+1}}</th>
+            <td style="text-transform: capitalize;">{{item.name}}</td>
+            <td >{{item.email}}</td>
+            <td style="text-transform: capitalize;">{{item.city}}</td>
+            <td><button class="btn btn-info" (click)="deleteBtn(item.id)">Delete</button></td>
           </tr>
         </tbody>
       </table>
  </div>
-<div>
-    <button (click)="hello()">api data call</button>
-</div>
