--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -23,6 +23,7 @@
             <td >{{item.email}}</td>
             <td style="text-transform: capitalize;">{{item.city}}</td>
             <td><button class="btn btn-info" (click)="deleteBtn(item.id)">Delete</button></td>
+            <!-- <td ><button class="btn btn-warning" routerLink="/additem" (click)="editBtn(item.id,item)">Edit</button></td> -->
           </tr>
         </tbody>
       </table>
